--- a/themes/hugo-theme-terminal/layouts/partials/footer.html
+++ b/themes/hugo-theme-terminal/layouts/partials/footer.html
@@ -5,9 +5,9 @@
         <span>{{ $.Site.Copyright | safeHTML }}</span>
     {{ else }}
       <div class="copyright">
-        <span>© {{ now.Year }} Powered by <a href="http://gohugo.io">Hugo</a></span>
+        <span>Sidharth Padhee -> </span>
+        <span>Software Engineer @ Uber AI Platform Team</span>
     {{ end }}
-        <span>:: Theme made by <a href="https://twitter.com/panr">panr</a></span>
       </div>
   </div>
 </footer>
